# femtogpt2

./: Cargo.toml
src/: gpt.rs  lib.rs  main.rs  optimizer.rs
src/funcs/: add.rs
